--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
 
           <div class="fixed-bottom mb-5">
             <h3 class="text-center mb-2">IAS Activity 4</h3>
-            <p class="text-center m-0">Ajero, Hannah</p>
-            <p class="text-center m-0">Bañares, Marife</p>
+            <p class="text-center m-0">Ajero, Maria Hannah</p>
+            <p class="text-center m-0">Bañares, Marife Diane</p>
             <p class="text-center m-0">Grado, Luis Anthony</p>
           </div>
           
